# libgcorewar

./: CMakeLists.txt  Makefile  corewar_visual_destroy.c  main.c
destroy/: corewar_visual_destroy.c  string_animation_destroy.c  string_winner_animation_init.c
draw/: carriage_draw.c  destroy_draw.c  draw.c  frame_draw.c  lines_draw.c  step_draw.c  x_draw.c
include/: libgcorewar.h
init/: corewar_visual_init.c  init_set_drawable_elems.c  tmp
init/X/: create_x.c  create_x_shader_program.c  create_x_vao.c
init/carriages/: create_carriage.c  create_carriage_shader_program.c  create_carriage_vao.c
init/create_pictures/: create_picture_carriage.c  create_picture_x.c
init/frame/: create_frame_shader_program.c  create_frame_vao.c
init/lines/: lines.c
init/rectangles_vao/: create_carriage_shader_program.c  create_carriage_vao.c
init/shaders/: carriage_shaders.c  frame_shader.frag  frame_shader.vert  frame_shaders.c  x_shaders.c
init/static_string_animation_init/: static_string_animation_init.c
init/str_champions/: str_champions_create.c  str_champions_draw_init.c
init/str_corewar/: str_corewar_draw_init.c
init/str_counters/: str_counters_create.c
init/str_map/: str_map_create.c  str_map_draw_function.c  str_map_draw_init.c
init/str_step_counter/: str_step_counter_draw_init.c
init/str_xlogins/: str_xlogins_create.c
keys/: key_escape.c  key_left_right.c  key_shift.c  key_space.c  keys.h
other/: other.c  other_2.c  other_3.c
step/: carriage_update.c  corewar_visual_step.c  step_x.c  str_step_carriage.c  update_map.c
t_carriage_list/: carriage_list_add.c  carriage_list_del.c  carriage_list_update.c
